@@ -1,15 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.462 2005/11/06 18:40:43 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.463 2005/11/06 19:43:31 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
   initial generic disk support
+  fixes for add_partition() code
   src/net/server/handlers/WebGLIHandler.py:
   added support for creating generic disks
+  add new partition working
 
   6 Nov 2005; Preston Cody <codeman@gentoo.org>
   webgli: Partitioning making progress.
